--- a/Cordova/www/index.html
+++ b/Cordova/www/index.html
@@ -66,6 +66,8 @@
             var current_reading_string = "";
             var current_key = 0;
             var stream = "";
+            var regex_key = "([0-9]);"
+            var regex_base64 = 
 
             var onDeviceReady = function() {
                 console.log("device   ready");
